优化启动脚本配置